@@ -33,7 +33,6 @@ Source Repository
 -----------------
 
   <https://anonscm.debian.org/cgit/dpkg/dpkg.git>
-  <git://anonscm.debian.org/dpkg/dpkg.git>
 
 
 Building from git source
