@@ -60,7 +60,7 @@ TODO
    - Check https://d-i.alioth.debian.org/spellcheck/level5/index.html
 
  * Discuss and implement
-   http://www.hadrons.org/~guillem/debian/docs/origin.proposal
+   https://www.hadrons.org/~guillem/debian/docs/origin.proposal
 
  * Deprecate --force-not-root flag (remove modstatdb_rw rootneeded flags).
 
