@@ -7,7 +7,7 @@ Origin: debian
 Bugs: debbugs://bugs.debian.org
 Homepage: https://wiki.debian.org/Teams/Dpkg
 Vcs-Browser: https://anonscm.debian.org/cgit/dpkg/dpkg.git
-Vcs-Git: git://anonscm.debian.org/dpkg/dpkg.git
+Vcs-Git: https://anonscm.debian.org/git/dpkg/dpkg.git
 Standards-Version: 3.9.6
 Build-Depends: dpkg-dev (>= 1.17.14), debhelper (>= 9.20141010),
  pkg-config, flex,
