@@ -379,7 +379,7 @@ Maintainer: Dpkg Developers <debian\-dpkg@lists.debian.org>
 XBS\-Upstream\-Release\-Status: stable
 Homepage: https://wiki.debian.org/Teams/Dpkg
 Vcs\-Browser: https://anonscm.debian.org/cgit/dpkg/dpkg.git
-Vcs\-Git: git://anonscm.debian.org/dpkg/dpkg.git
+Vcs\-Git: https://anonscm.debian.org/git/dpkg/dpkg.git
 Standards\-Version: 3.7.3
 Build\-Depends: pkg\-config, debhelper (>= 4.1.81),
  libselinux1\-dev (>= 1.28\-4) [!linux\-any]
