@@ -13,6 +13,10 @@ dpkg (1.18.5) UNRELEASED; urgency=medium
   * Use ohshit() instead of internerr() for unhandled dpkg-split exit codes.
     (i.e. do not abort). Closes: #812679
   * Detect non-regular file archive arguments earlier in dpkg.
+  * Switch URLs in docs, code comments and packaging, from http:// or git://
+    to https:// if the latter is available (round three). This includes the
+    dpkg git repository, copyright format URL and examples in man pages among
+    others.
   * Perl modules:
     - Add new CTRL_REPO_RELEASE control block type to Dpkg::Control.
     - Add new CTRL_COPYRIGHT_HEADER, CTRL_COPYRIGHT_FILES and
@@ -4653,7 +4657,7 @@ dpkg (1.15.0) experimental; urgency=low
   * Move update-alternatives, dpkg-divert and dpkg-statoverride to /usr/bin
     but keep compatibility symlinks in /usr/sbin for the squeeze release
     until all maintainer scripts are fixed (see
-    http://lintian.debian.org/tags/command-with-path-in-maintainer-script.html).
+    https://lintian.debian.org/tags/command-with-path-in-maintainer-script.html).
     Closes: #216606
   * Use dh_lintian to install lintian overrides. Build-Depends on debhelper
     (>= 6.0.7) for this. Update debhelper compatibility level to 6 at the same
